--- a/app/src/main/res/layout/fragment_unit3.xml
+++ b/app/src/main/res/layout/fragment_unit3.xml
@@ -32,6 +32,22 @@
                 android:textSize="@dimen/h1"
                 android:textStyle="bold" />
 
+            <!--Objective-->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Objective"
+                android:layout_marginTop="16dp"
+                android:textSize="@dimen/h2"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="At the end of this unit, students are able to identify the four categories of application software"
+                android:textSize="@dimen/h2"
+                android:textStyle="normal" />
+
 
             <!--head 1-->
             <TextView
@@ -39,6 +55,7 @@
                 android:layout_height="wrap_content"
                 android:text="Warm-up"
                 android:textSize="@dimen/h2"
+                android:layout_marginTop="@dimen/padding"
                 android:textStyle="bold" />
 
             <TextView
